add modalidad horario fecha inicio in matricula espe

--- a/views/matriculaEspecializacion.ejs
+++ b/views/matriculaEspecializacion.ejs
@@ -83,6 +83,16 @@
                     <td colspan="5"><%= sede.nombre %></td>
                 </tr>
                 <tr>
+                    <td><b>Modalidad</b></td>
+                    <td><b>Horario</b></td>
+                    <td><b>Fecha inicio</b></td>
+                </tr>
+                <tr>
+                    <td><%= modalidad %></td>
+                    <td><%= horario.hora_inicio + " " + horario.hora_fin %></td>
+                    <td><%= fecha_inicio %></td>
+                </tr>
+                <tr>
                     <td colspan="5"><b>Pago de matricula</b></td>
                 </tr>
                 <tr>
