Add fecha inscripcion to pdfs

--- a/views/matricula.ejs
+++ b/views/matricula.ejs
@@ -136,6 +136,10 @@
                 </tr>
                 <% } %>
             </table>
+            <div>
+                <%= new Date(fecha_inscripcion).toLocaleString().split(",")[0]
+                %>
+            </div>
             <div class="firma-container">
                 <div class="firma">Estudiante</div>
                 <div class="firma">Director</div>
