Add fecha inscripcion to pdfs

--- a/views/matricula.ejs
+++ b/views/matricula.ejs
@@ -137,8 +137,8 @@
                 <% } %>
             </table>
             <div>
-                <%= new Date(fecha_inscripcion).toLocaleString().split(",")[0]
-                %>
+                Fecha: <%= new
+                Date(fecha_inscripcion).toLocaleString().split(",")[0] %>
             </div>
             <div class="firma-container">
                 <div class="firma">Estudiante</div>
