remove token check from generateFicha

--- a/views/matricula.ejs
+++ b/views/matricula.ejs
@@ -108,6 +108,7 @@
                         </table>
                     </td>
                 </tr>
+                <tr style="height: 50px"></tr>
                 <tr>
                     <td colspan="4"><b>Pago de matricula</b></td>
                 </tr>
