--- a/views/matriculaEspecializacion.ejs
+++ b/views/matriculaEspecializacion.ejs
@@ -95,6 +95,7 @@
                         Date(fecha_inicio).toLocaleString().split(",")[0] %>
                     </td>
                 </tr>
+                <tr style="height: 50px"></tr>
                 <tr>
                     <td colspan="5"><b>Pago de matricula</b></td>
                 </tr>
