Fix fecha inscripcion format in pdf matricula

--- a/views/matricula.ejs
+++ b/views/matricula.ejs
@@ -157,10 +157,7 @@
                 <% } %>
             </table>
             <div>
-                <u>
-                    Fecha: <%= new
-                    Date(fecha_inscripcion).toLocaleString().split(",")[0] %>
-                </u>
+                <u> Fecha: <%= fecha_inscripcion %> </u>
             </div>
             <div class="firma-container">
                 <div class="firma">Estudiante</div>
