--- a/views/matriculaEspecializacion.ejs
+++ b/views/matriculaEspecializacion.ejs
@@ -131,8 +131,7 @@
             </table>
             <div>
                 <u>
-                    Fecha: <%= new
-                    Date(fecha_inscripcion).toLocaleString().split(",")[0] %>
+                    Fecha: <%= fecha_inscripcion %>
                 </u>
             </div>
 
